[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/WinScreen/WinScreen.gd" type="Script" id=1]
[ext_resource path="res://ui/Resources/MainTheme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.498039 )

[sub_resource type="Animation" id=2]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath("PanelContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="WinScreen" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 463.0
margin_top = 317.5
margin_right = 817.0
margin_bottom = 482.5
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 354.0
margin_bottom = 165.0
custom_constants/margin_right = 40
custom_constants/margin_top = 30
custom_constants/margin_left = 40
custom_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 40.0
margin_top = 30.0
margin_right = 314.0
margin_bottom = 135.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 15
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinPrompt" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 99.0
margin_right = 174.0
margin_bottom = 15.0
size_flags_horizontal = 4
text = "You Win!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PresetLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 274.0
margin_bottom = 45.0
text = "Preset: Easy (10x10, 50 Mines)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 274.0
margin_bottom = 75.0
text = "Time: 27.123"

[node name="SeedLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 274.0
margin_bottom = 105.0
text = "Seed: mines"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/fade_in = SubResource( 2 )
